<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorLightGrey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_or_phone"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/colorDarkGrey"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_email_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/colorDarkGrey"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorOrange"
        android:text="@string/Login"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorLightGrey"
            android:layout_marginTop="@dimen/_8sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau"
            android:layout_marginStart="@dimen/_14sdp"
            android:textSize="16sp"/>

        <View
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorLightGrey"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/masuk_google"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/masuk_facebook"
        android:textAllCaps="false"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_pass"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/_30sdp"/>


        <View
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_15sdp"
            android:background="@color/colorBlack"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_1sdp"/>


        <TextView
            android:id="@+id/txt_belum_punya_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/_8sdp"/>

    </LinearLayout>

</LinearLayout>