<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.AwalFragment"
    android:background="@color/colorBgAwal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/dots_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_190sdp"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_240sdp"/>

            <GridLayout
                android:id="@+id/grid_awal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_210sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_pesawat"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/pesawat"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tiket_pesawat"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_hotel"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/hotel"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_kereta"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/kereta"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tiket_kereta_api"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_pesawat_hotel"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/hotelpesawat"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pesawat_hotel"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_pulsa"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/paket"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pulsa_paket"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_rekreasi"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/tiket"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rekreasi"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <TextView
                android:id="@+id/txt_fitur_pilihan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitur_pilihan"
                android:textColor="@color/colorDarkGrey"
                android:layout_below="@+id/grid_awal"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/_24sdp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/ll_fitur_pilihan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txt_fitur_pilihan"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_poin"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/poin"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/poin"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_internet_luar_negri"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/internet_luar_negri"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/internet_luar_negri"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_pesawat_luar_negri"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/pesawat_luar_negri"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pesawat_luar_negri"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_bepergian_hemat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bepergian_hemat"
                android:textColor="@color/colorDarkGrey"
                android:layout_below="@+id/ll_fitur_pilihan"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/_24sdp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/ll_bepergian_hemat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txt_bepergian_hemat"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_promo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/promo"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/promo_saat_ini"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_notifikasi"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/notifikasi"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifikasi_harga"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_kamar"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_4sdp"
                    android:layout_margin="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/kamar"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kamar_budget"
                            android:layout_marginTop="@dimen/_10sdp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>